<resources>
    <string name="app_name">CalculadoraApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Calculadora Normal</string>
    <string name="second_fragment_label">Spinner + Image Button</string>
    <string name="third_fragment_label">ListView</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="firstValue">Ingrese el primer valor</string>
    <string name="second_value">Ingrese el segundo valor</string>
    <string name="result">Resultado</string>
    <string name="sum">Sumar</string>
    <string name="calc">Calcular</string>
    <string name="substract">Restar</string>
    <string name="divide">Dividir</string>
    <string name="multiply">Multiplicar</string>
    <string name="info">Información de la persona</string>
    <string name="description_btn_info">Boton para calcular</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="next_activity">Siguiente Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_web_fragment">Sitio Web</string>
</resources>