<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="textEnd"
    tools:context=".FirstFragment">

    <EditText
        android:id="@+id/txt_num1"
        android:layout_width="244dp"
        android:layout_height="63dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/firstValue"
        android:inputType="number"
        android:textColorHint="#ac6c34"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_num2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_num2"
        android:layout_width="244dp"
        android:layout_height="63dp"
        android:layout_marginBottom="444dp"
        android:ems="10"
        android:hint="@string/second_value"
        android:inputType="number"
        android:textColorHint="#ac6c34"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_sumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num2" />

    <TextView
        android:id="@+id/txt_res"
        android:layout_width="103dp"
        android:layout_height="43dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="52dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="#039BE5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_sumar"
        app:layout_constraintTop_toBottomOf="@+id/txt_num2" />

</androidx.constraintlayout.widget.ConstraintLayout>